examples/test/testpolicy374.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy374
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key13: value10
      key0: value23
      key21: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value33
      podSelector:
        matchLabels:
          key46: value0
          key22: value30
          key9: value30
